Ensuring that log streaming ceases when the channel is closed